--- a/src/layout/default.html
+++ b/src/layout/default.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+  <style>
+    [v-cloak] {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-<div id="app"></div>
+<div id="app" v-cloak></div>
 <!-- built files will be auto injected -->
 </body>
 </html>
