--- a/src/layout/default.html
+++ b/src/layout/default.html
@@ -7,6 +7,10 @@
   <meta name="renderer" content="webkit">
   <title></title>
   <style>
+    body {
+      overflow-x: hidden;
+      max-width: 100%;
+    }
     [v-cloak] {
       display: none;
     }
