--- a/src/layout/default.html
+++ b/src/layout/default.html
@@ -7,7 +7,7 @@
   <meta name="renderer" content="webkit">
   <title></title>
   <style>
-    body {
+    html, body {
       overflow-x: hidden;
       max-width: 100%;
     }
